plang/testing/logs/false-incorrect/126/program126.p.p
nm g7 lcpN (DgY) (ne tf x).


o dDDg Jr UWzb (c (L) (aey8 (q (rE (OEUaW)) X6njA (W8Kxx) rZqZ) ehe) gwX) :- ((lx iXt6, qmon; b O; vU), fddi (zcLIq (e7 (hxE) z (vJp)) c E9d myGW8) (z (aAFkG Wa H z mrOu) (kY (nlj) (vQH wCc8E (yzxG7 (eP (maT) f) (D6PKM) T72) (w9f2G lkJ7 (A0U7Z) L4t6t) LEj3) ciUYk (VzQ))), filLh (Af) (mdR qrLil Sb M8N) JAwCH; kmQ s QH5c IN Mi, (e6c (dq9 b31E3 Z1cW Sp r))).

? (pN4Og (Av) a, (s2H, kanS (xNt0) (rvzJP LcQ) (wPcnl)); loS, r; hxhUj (G0A) (zVrXz (yntB)) (uRi (PM411) (Pd) y (U7zvJ))).



